--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # Dependencies
 node_modules
 
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
 # Build output
 dist
 dist-ssr
