--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "emoji-picker-react": "^4.12.0",
     "firebase": "^10.13.1",
     "lucide-react": "^0.563.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19",
+    "react-dom": "19",
     "react-toastify": "^10.0.5",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@types/react": "19",
+    "@types/react-dom": "19",
+    "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -32,9 +32,9 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
+    "typescript": "5.7",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "6"
   },
   "packageManager": "yarn@4.12.0"
 }
